# saxpy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.githooks/: pre-commit
.github/workflows/: build.yml
conda.recipe/: meta.yaml
data/: insect.txt
include/: sax.h
jupyter/: discord.ipynb  distance.ipynb  hotsax.ipynb  insect.ipynb  paa.ipynb  sax.ipynb  str_func.ipynb  testing.ipynb  tinkah.ipynb  visit_registry.ipynb  vsm.ipynb  znorm_tinkah.ipynb
jupyter/.ipynb_checkpoints/: insect-checkpoint.ipynb  paa-checkpoint.ipynb
resources/data/Gun_Point/: Gun_Point_TEST  Gun_Point_TRAIN
saxpy/: __init__.py  alphabet.py  alphabet2cuts.py  datasets.py  discord.py  distance.py  hotsax.py  paa.py  repair.py  rra.py  sax.py  saxvsm.py  saxvsm_optimize.py  strfunc.py  ts2sax.py  util.py  visit_registry.py  znorm.py
saxpy/data/: ecg0606_1.csv
site/: README.rst  citation.bib  million-reg.py
src/: bindings.cpp  sax.cpp  saxpy.cpp  saxpy.hpp  subseries.cpp  util.cpp  znorm.cpp
tests/: ecg_sax_string.txt  test.py  test_2cuts.py  test_cuts.py  test_cuts0.py  test_datasets.py  test_discord_bruteforce.py  test_discord_hotsax.py  test_distance.py  test_doctests.py  test_paa.py  test_registry.py  test_repair.py  test_rra.py  test_sax_chunking.py  test_sax_window.py  test_str.py  test_ts2string.py  test_vsm.py  test_vsm_classifier.py  test_vsm_optimize.py  test_znorm.py
