[metadata]
name = saxpy
version=1.0.0
author = Pavel Senin
author-email = seninp@gmail.org
summary = SAX, HOTSAX, EMMA implementations for Python
license = GPL2
description-file = README.rst
home-page = https://github.com/seninp/saxpy.git
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    foobar
